# MKE

./: CMakeLists.txt  headers.h  main.cpp
CLinalg/: CLinalg.cpp  CLinalg.h  CMakeLists.txt
CLinalg/CMatrix/: CMakeLists.txt  CMatrix.cpp  CMatrix.h
Solution/: CMakeLists.txt  Solution.cpp  Solution.h
